--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,7 @@
               <option value="4">4</option>
               <option value="5">5</option>
             </select>
+          </div>
      </div>
         <div style="float:left; margin-right: 1.5em;">
 		<label for="distance"> Distance from CBD in Km</label><br>
@@ -101,6 +102,15 @@
           </div>
     </div>
     <div style="float:left; margin-right: 1.5em;">
+	<label for="car">Type of housing</label><br>
+    <select name="type of housing" id="text" required>
+              <option value="House">House</option>
+              <option value="Townhouse">Townhouse</option>
+              <option value="Unit or Duplex">Unit or Duplex</option>
+            </select>
+         </div>
+          </div>
+    <!--div style="float:left; margin-right: 1.5em;">
 	<label for="type_h">House</label><br>
     <input
         type="number"
@@ -124,9 +134,22 @@
           type="number"
           name="type_u"
           placeholder=" "
-          required min="0" max="1"/>
+          required min="0" max="1"/-->
         </div>
-
+          <!--/div>
+        <label for="Region">Region</label><br>
+    <select name="Region" id="text" required>
+              <option value="S Metropolitan">S Metropolitan</option>
+              <option value="region_Eastern Metropolitan">E Metropolitan</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select-->
+        </div>
         <div style="float:left; margin-right: 1.5em;">
 		<label for="region_Southern Metropolitan">S Metropolitan</label><br>
         <input
