Added new image files. Renamed previous image files. Modified README, powerpoint presentation, notebook file

--- a/Melbourne_Housing_Price_Prediction/templates/index.html
+++ b/Melbourne_Housing_Price_Prediction/templates/index.html
@@ -34,20 +34,20 @@
   <style>
     form {
       margin: auto;
-      background-color: darkslateblue;
+      background-color: #483d8b;
     }
     @keyframes example {
       0% {
-        background-color: black;
+        background-color: #0c0811;
       }
       25% {
-        background-color: darkslateblue;
+        background-color: #272142;
       }
       50% {
-        background-color: deepskyblue;
+        background-color: #483d8b;
       }
       100% {
-        background-color: black;
+        background-color: #0c0811;
       }
     }
     .result {
